ajout des liens

--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
                     </div>
                 </div>
                 <div class="head__photo">
-                    
+
                 </div>
                 <div class="head__links">
                     <ul>
-                        <li><a href=""><i class="fa-solid fa-globe"></i> @Khaledik</a></li>
-                        <li><a href=""><i class="fa-brands fa-linkedin-in"></i> @khaled-i-8a220b242</a></li>
+                        <li><a target="_blank" href="https://github.com/Khaledik"><i class="fa-brands fa-github"></i> @Khaledik</a></li>
+                        <li><a target="_blank" href="https://www.linkedin.com/in/khaled-i-8a220b242/?lipi=urn%3Ali%3Apage%3Ad_flagship3_feed%3BhX5Qo6lBQBS3mSr2aDQb0A%3D%3D"><i class="fa-brands fa-linkedin-in"></i> @khaled-i-8a220b242</a></li>
                     </ul>
                 </div>
             </div>
@@ -78,7 +78,7 @@
                 <div class="left__side__item">
                     <h4>Projets</h4>
                     <ul>
-                        <li><a href=""><i class="fa-solid fa-link"></i> Booki</a></li>
+                        <li><a target="_blank" href="https://khaledik.github.io/booki/"><i class="fa-solid fa-link"></i> Booki</a></li>
                     </ul>
                 </div>
                 
